# otto-hzys-py-tool

./: .pdm-python  LICENSE  README.md  pyproject.toml
src/otto_hzys_py_tool/: __init__.py  __main__.py  browser.py
tests/: __init__.py  __main__.py
