[project]
name = "otto-hzys-py-tool"
version = "1.1.0+deprecated"
description = "Default template for PDM package"
authors = [
    {name = "kaesinol", email = "keiplyer@gmail.com"},
]
dependencies = [
    "selenium>=4.20.0",
    "fastapi>=0.110.3",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "psutil>=5.9.8",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
